--- a/Contact.html
+++ b/Contact.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html> 
+<html>
+<head>
+  <title>Image Shop Contact From</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -93,6 +97,7 @@ body {
 }
 
 </style>
+</head>
 <body>
 <!--------------------start nav section----------- -->
 <!-------------------- End carousel slider section----------- -->
