--- a/Amazing.html
+++ b/Amazing.html
@@ -50,10 +50,6 @@ body {
   background-color: teal;
   color: white;
 }
-.img-st{
-  width: 100%;
-  height: 400px;
-}
 .image-top img
 {
 	width:100%;
@@ -144,32 +140,51 @@ body {
 <!----------start slider section-->
 <div class="w3-main" style="margin-left:250px;">
         <div class="navber w3-theme w3-animate-zoom w3-bar-item w3-large">
-          <p><i class="fa fa-bars w3-button w3-teal w3-hide-large w3-xlarge menu" onclick="w3_open()"></i>
-          <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
-          <a href="#"><i class="fa fa-fw fa-search"></i> Search</a> 
-          <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a> 
-          <a href="Login.html"><i class="fa fa-fw fa-user"></i> Login</a>
+            <p><i class="fa fa-bars w3-button w3-teal w3-hide-large w3-xlarge menu" onclick="w3_open()"></i>
+            <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
+            <a href="#"><i class="fa fa-fw fa-search"></i> Search</a> 
+            <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a> 
+            <a href="Login.html"><i class="fa fa-fw fa-user"></i> Login</a>
         </div>
-         <div class="caurosul">
+         <!-- <div class="caurosul">
              <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
-             </div>
-             <div class="slider">
-                <div class="w3-content w3-section">
-                  <img class="mySlides w3-animate-fading img-st" src="image/w1.jpg" style="width:100%">
-                  <img class="mySlides w3-animate-fading img-st" src="image/w2.jpg" style="width:100%">
-                  <img class="mySlides w3-animate-fading img-st" src="image/w3.jpg" style="width:100%">
-                  <img class="mySlides w3-animate-fading img-st" src="image/w4.jpg" style="width:100%">
-                  <img class="mySlides w3-animate-fading img-st" src="image/w1.jpg" style="width:100%">
+             </div> -->
+          <div class="slider">
+             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+               <div class="carousel-inner img-st">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="image/w4.jpg" alt="First slide" style="width: 100%;">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="image/w1.jpg" alt="Second slide"style="width: 100%;" >
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="image/w2.jpg" alt="Third slide" style="width: 100%;">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="image/w5.jpg" alt="Third slide" style="width: 100%;">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="image/w6.jpg" alt="Third slide" style="width: 100%;">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="image/w3.jpg" alt="Third slide" style="width: 100%;">
+                  </div>
                 </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
              </div>
-           </div>
-</div>  
-<!------Photo Grid Tittle-->    
-<div class="w3-main" style="margin-left:250px;">
-  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-chevron-up"></i></button>
-</div>
+            </div>
+   </div>  
 <!------Photo Grid Tittle--> 
 <div class="w3-main" style="margin-left:270px;">
+  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-chevron-up"></i></button>
    <div class="content">
       <h2>Amazine picture</h2>
         <div class="baguetteBoxOne gallery">
@@ -182,6 +197,9 @@ body {
                <button type="button" class="btn btn-secondary" title="Like">
                  <i class="fa fa-heart-o"></i>
                 </button>
+                <button type="button" class="btn btn-secondary" title="Download">
+                  <i class="fa fa-arrow-down"></i>
+                 </button>
             </div>
            </a>
            <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla">
@@ -193,8 +211,12 @@ body {
               <button type="button" class="btn btn-secondary" title="Like">
                 <i class="fa fa-heart-o"></i>
                </button>
+               <button type="button" class="btn btn-secondary" title="Download">
+                <i class="fa fa-arrow-down"></i>
+               </button>
            </div>
           </a>
+         
           <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla">
             <img src="image/image7.jpg" alt="">
             <div class="like-view">
@@ -203,6 +225,24 @@ body {
               </button>
               <button type="button" class="btn btn-secondary" title="Like">
                 <i class="fa fa-heart-o"></i>
+               </button>
+               <button type="button" class="btn btn-secondary" title="Download">
+                <i class="fa fa-arrow-down"></i>
+               </button>
+           </div>
+          </a>
+          
+          <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla">
+            <img src="image/image7.jpg" alt="">
+            <div class="like-view">
+             <button type="button" class="btn btn-secondary" title="view">
+                <i class="fa fa-eye"></i>
+              </button>
+              <button type="button" class="btn btn-secondary" title="Like">
+                <i class="fa fa-heart-o"></i>
+               </button>
+               <button type="button" class="btn btn-secondary" title="Download">
+                <i class="fa fa-arrow-down"></i>
                </button>
            </div>
           </a>
@@ -215,16 +255,8 @@ body {
               <button type="button" class="btn btn-secondary" title="Like">
                 <i class="fa fa-heart-o"></i>
                </button>
-           </div>
-          </a>
-          <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla">
-            <img src="image/image7.jpg" alt="">
-            <div class="like-view">
-             <button type="button" class="btn btn-secondary" title="view">
-                <i class="fa fa-eye"></i>
-              </button>
-              <button type="button" class="btn btn-secondary" title="Like">
-                <i class="fa fa-heart-o"></i>
+               <button type="button" class="btn btn-secondary" title="Download">
+                <i class="fa fa-arrow-down"></i>
                </button>
            </div>
           </a>
@@ -237,16 +269,8 @@ body {
               <button type="button" class="btn btn-secondary" title="Like">
                 <i class="fa fa-heart-o"></i>
                </button>
-           </div>
-          </a>
-          <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla">
-            <img src="image/image7.jpg" alt="">
-            <div class="like-view">
-             <button type="button" class="btn btn-secondary" title="view">
-                <i class="fa fa-eye"></i>
-              </button>
-              <button type="button" class="btn btn-secondary" title="Like">
-                <i class="fa fa-heart-o"></i>
+               <button type="button" class="btn btn-secondary" title="Download">
+                <i class="fa fa-arrow-down"></i>
                </button>
            </div>
           </a>
@@ -259,16 +283,8 @@ body {
               <button type="button" class="btn btn-secondary" title="Like">
                 <i class="fa fa-heart-o"></i>
                </button>
-           </div>
-          </a>
-          <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla">
-            <img src="image/image7.jpg" alt="">
-            <div class="like-view">
-             <button type="button" class="btn btn-secondary" title="view">
-                <i class="fa fa-eye"></i>
-              </button>
-              <button type="button" class="btn btn-secondary" title="Like">
-                <i class="fa fa-heart-o"></i>
+               <button type="button" class="btn btn-secondary" title="Download">
+                <i class="fa fa-arrow-down"></i>
                </button>
            </div>
           </a>
@@ -281,16 +297,8 @@ body {
               <button type="button" class="btn btn-secondary" title="Like">
                 <i class="fa fa-heart-o"></i>
                </button>
-           </div>
-          </a>
-          <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla">
-            <img src="image/image7.jpg" alt="">
-            <div class="like-view">
-             <button type="button" class="btn btn-secondary" title="view">
-                <i class="fa fa-eye"></i>
-              </button>
-              <button type="button" class="btn btn-secondary" title="Like">
-                <i class="fa fa-heart-o"></i>
+               <button type="button" class="btn btn-secondary" title="Download">
+                <i class="fa fa-arrow-down"></i>
                </button>
            </div>
           </a>
@@ -303,16 +311,8 @@ body {
               <button type="button" class="btn btn-secondary" title="Like">
                 <i class="fa fa-heart-o"></i>
                </button>
-           </div>
-          </a>
-          <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla">
-            <img src="image/image7.jpg" alt="">
-            <div class="like-view">
-             <button type="button" class="btn btn-secondary" title="view">
-                <i class="fa fa-eye"></i>
-              </button>
-              <button type="button" class="btn btn-secondary" title="Like">
-                <i class="fa fa-heart-o"></i>
+               <button type="button" class="btn btn-secondary" title="Download">
+                <i class="fa fa-arrow-down"></i>
                </button>
            </div>
           </a>
@@ -325,6 +325,9 @@ body {
               <button type="button" class="btn btn-secondary" title="Like">
                 <i class="fa fa-heart-o"></i>
                </button>
+               <button type="button" class="btn btn-secondary" title="Download">
+                <i class="fa fa-arrow-down"></i>
+               </button>
            </div>
           </a>
           <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla">
@@ -335,6 +338,65 @@ body {
               </button>
               <button type="button" class="btn btn-secondary" title="Like">
                 <i class="fa fa-heart-o"></i>
+               </button>
+               <button type="button" class="btn btn-secondary" title="Download">
+                <i class="fa fa-arrow-down"></i>
+               </button>
+           </div>
+          </a>
+          <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla">
+            <img src="image/image7.jpg" alt="">
+            <div class="like-view">
+             <button type="button" class="btn btn-secondary" title="view">
+                <i class="fa fa-eye"></i>
+              </button>
+              <button type="button" class="btn btn-secondary" title="Like">
+                <i class="fa fa-heart-o"></i>
+               </button>
+               <button type="button" class="btn btn-secondary" title="Download">
+                <i class="fa fa-arrow-down"></i>
+               </button>
+           </div>
+          </a>
+          <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla">
+            <img src="image/image7.jpg" alt="">
+            <div class="like-view">
+             <button type="button" class="btn btn-secondary" title="view">
+                <i class="fa fa-eye"></i>
+              </button>
+              <button type="button" class="btn btn-secondary" title="Like">
+                <i class="fa fa-heart-o"></i>
+               </button>
+               <button type="button" class="btn btn-secondary" title="Download">
+                <i class="fa fa-arrow-down"></i>
+               </button>
+           </div>
+          </a>
+          <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla">
+            <img src="image/image7.jpg" alt="">
+            <div class="like-view">
+             <button type="button" class="btn btn-secondary" title="view">
+                <i class="fa fa-eye"></i>
+              </button>
+              <button type="button" class="btn btn-secondary" title="Like">
+                <i class="fa fa-heart-o"></i>
+               </button>
+               <button type="button" class="btn btn-secondary" title="Download">
+                <i class="fa fa-arrow-down"></i>
+               </button>
+           </div>
+          </a>
+          <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla">
+            <img src="image/image7.jpg" alt="">
+            <div class="like-view">
+             <button type="button" class="btn btn-secondary" title="view">
+                <i class="fa fa-eye"></i>
+              </button>
+              <button type="button" class="btn btn-secondary" title="Like">
+                <i class="fa fa-heart-o"></i>
+               </button>
+               <button type="button" class="btn btn-secondary" title="Download">
+                <i class="fa fa-arrow-down"></i>
                </button>
            </div>
           </a>
