--- a/Amazing.html
+++ b/Amazing.html
@@ -94,6 +94,10 @@ body {
 	margin-left:4%;
 	transition:1s;
 }
+.img-st{
+	max-width: 100%;
+	height: 480px;
+  }
 
 </style>
 <body>
@@ -171,14 +175,14 @@ body {
                     <img class="d-block w-100" src="image/w3.jpg" alt="Third slide" style="width: 100%;">
                   </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <!-- <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
-                </a>
+                </a> -->
              </div>
             </div>
    </div>  
@@ -189,7 +193,7 @@ body {
       <h2>Amazine picture</h2>
         <div class="baguetteBoxOne gallery">
            <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla">
-             <img src="image/image7.jpg" alt="">
+             <img class="img" src="image/image7.jpg" alt="">
              <div class="like-view">
               <button type="button" class="btn btn-secondary" title="view">
                  <i class="fa fa-eye"></i>
