--- a/Animal.html
+++ b/Animal.html
@@ -148,19 +148,31 @@ body {
           <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a> 
           <a href="Login.html"><i class="fa fa-fw fa-user"></i> Login</a>
         </div>
-         <div class="caurosul">
-             <div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" id="myOverlay"></div>
+        
+        <div class="slider">
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner img-st">
+               <div class="carousel-item active">
+                 <img class="d-block w-100" src="image/w4.jpg" alt="First slide" style="width: 100%;">
+               </div>
+               <div class="carousel-item">
+                 <img class="d-block w-100" src="image/w1.jpg" alt="Second slide"style="width: 100%;" >
+               </div>
+               <div class="carousel-item">
+                 <img class="d-block w-100" src="image/w2.jpg" alt="Third slide" style="width: 100%;">
+               </div>
+               <div class="carousel-item">
+                 <img class="d-block w-100" src="image/w5.jpg" alt="Third slide" style="width: 100%;">
+               </div>
+               <div class="carousel-item">
+                 <img class="d-block w-100" src="image/w6.jpg" alt="Third slide" style="width: 100%;">
+               </div>
+               <div class="carousel-item">
+                 <img class="d-block w-100" src="image/w3.jpg" alt="Third slide" style="width: 100%;">
+               </div>
              </div>
-             <div class="slider">
-                <div class="w3-content w3-section">
-                  <img class="mySlides w3-animate-fading img-st" src="image/w1.jpg" style="width:100%">
-                  <img class="mySlides w3-animate-fading img-st" src="image/w2.jpg" style="width:100%">
-                  <img class="mySlides w3-animate-fading img-st" src="image/w3.jpg" style="width:100%">
-                  <img class="mySlides w3-animate-fading img-st" src="image/w4.jpg" style="width:100%">
-                  <img class="mySlides w3-animate-fading img-st" src="image/w1.jpg" style="width:100%">
-                </div>
-             </div>
-           </div>
+          </div>
+         </div>
 </div>  
 <!------Photo Grid Tittle-->    
 <div class="w3-main" style="margin-left:250px;">
