--- a/Contact.html
+++ b/Contact.html
@@ -8,93 +8,9 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-teal.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><style>
-body {font-family: "Roboto", sans-serif}
-.w3-bar-block .w3-bar-item {
-  padding: 16px;
-  font-weight: bold;
-}
-body {
-  font-family: Arial;
-  margin: 0;
-}
-.container1 .mySlides img
-{
-    height: 550px;
-}
-/* Style the search box */
-#mySearch {
-  width: 100%;
-  font-size: 15px;
-  padding: 11px;
-  border: 1px solid #ddd;
-}
-
-/* Style the navigation menu inside the left column */
-#myMenu {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-#myMenu li a {
-  padding: 12px;
-  text-decoration: none;
-  color: black;
-  display: block
-}
-
-#myMenu li a:hover {
-  background-color: teal;
-}
-.img-st{
-  width: 100%;
-  height: 400px;
-}
-.image-top img
-{
-	width:100%;
-}
-.image-top img:hover
-{
-	transform:scale(1.1);
-	transition:1s;
-}
-.like-view
-{
-	display:block;
-	opacity:0;
-	position:absolute;
-	margin-left:0;
-	width:70px;
-  margin-bottom:20%;
-  transform: translateY(-100%);
-}
-.like-view .fa
-{
-	cursor:pointer;
-	background-color:teal;
-	color:#fff;
-	height:25px;
-	width:25px;
-	font-size:15px;
-	padding:5px;
-	margin-top:3%;
-	margin-bottom:7%;
-	
-}
-.like-view .btn-secondary
-{
-	background:none!important;
-	border:none!important;
-	box-shadow:none!important;
-}
-.image-top:hover .like-view
-{
-	opacity:1;
-	margin-left:5%;
-	transition:1s;
-}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="css/bodyimagestyle.css">
+<style>
 
 </style>
 </head>
