--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
        <a class="w3-bar w3-bar-item w3-button w3-teal" href="#">Plants Name</a>
          <input type="text" id="mySearch" onkeyup="myStyle()" placeholder="Search.." title="Type in a category">
            <ul id="myMenu" class="w3-container">
-              <li><a href="Nature.html">Natural</a></li>
+              <li><a href="natural.html">Natural</a></li>
               <li><a href="wellpaper.html">Wellpapers</a></li>
               <li><a href="Amazing.html">Amazing</a></li>
               <li><a href="Trees.html">Trees</a></li>
