--- a/workhome.html
+++ b/workhome.html
@@ -24,7 +24,7 @@
        <a class="w3-bar w3-bar-item w3-button w3-teal" href="#">Plants Name</a>
          <input type="text" id="mySearch" onkeyup="myStyle()" placeholder="Search.." title="Type in a category">
            <ul id="myMenu" class="w3-container">
-              <li><a href="Nature.html">Natural</a></li>
+              <li><a href="natural.html">Natural</a></li>
               <li><a href="wellpaper.html">Wellpapers</a></li>
               <li><a href="Amazing.html">Amazing</a></li>
               <li><a href="Trees.html">Trees</a></li>
@@ -69,22 +69,22 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner img-st">
                <div class="carousel-item active">
-                 <img class="d-block w-100" src="image/w4.jpg" alt="First slide" style="width: 100%;">
+                 <img class="d-block w-100 img-fluid" src="image/w4.jpg" alt="First slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w1.jpg" alt="Second slide"style="width: 100%;" >
+                 <img class="d-block w-100 img-fluid" src="image/w1.jpg" alt="Second slide"style="width: 100%;" >
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w2.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100 img-fluid" src="image/w2.jpg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w5.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100 img-fluid" src="image/w5.jpg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w6.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100 img-fluid" src="image/w6.jpg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w3.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100 img-fluid" src="image/w3.jpg" alt="Third slide" style="width: 100%;">
                </div>
              </div>
           </div>
