--- a/Contact.html
+++ b/Contact.html
@@ -73,19 +73,15 @@
   <div class="container1">
     <form action="/action_page.php">
       <div class="form-group">
-        <label for="exampleInputtext1">first Name</label>
-        <input type="text" class="form-control" id="exampleInputtext1" aria-describedby="Help">
+        <label for="exampleInputtext1">First Name</label>
+        <input type="text" class="form-control" id="exampleInputtext1" placeholder="Your first name.." aria-describedby="Help">
       </div>
   
       <label for="lname">Last Name</label>
       <input type="text" id="lname" class="form-control" name="lastname" placeholder="Your last name..">
-  
-      <label for="country">Country</label>
-      <select id="country" name="country">
-        <option value="australia">Australia</option>
-        <option value="canada">Canada</option>
-        <option value="usa">USA</option>
-      </select>
+
+      <label for="lname">Your Email</label>
+      <input type="text" id="lname" class="form-control" name="Email" placeholder="Your Email @gmail.com">
   
       <label for="subject">Subject</label>
       <textarea id="subject" name="subject"class="form-control" placeholder="Write something.." style="height:200px"></textarea>
