--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </div>  
     <div class="w3-main" style="margin-left:250px;">
       <div class="nature w3-container">
-        <H1>Wellpapers</H1>
+        <H1>Natural</H1>
         <p>Let’s celebrate the magic of Mother Earth — with images of everything our planet has to offer, from stunning seascapes, starry skies, and everything in between.</p>
       </div>
     </div>
@@ -235,7 +235,7 @@
 <!------Photo Grid Tittle-->    
     <div class="w3-main" style="margin-left:250px;">
       <div class="nature w3-container">
-        <H1>Wellpapers</H1>
+        <H1>Amazing</H1>
         <p>Let’s celebrate the magic of Mother Earth — with images of everything our planet has to offer, from stunning seascapes, starry skies, and everything in between.</p>
       </div>
     </div>
@@ -303,7 +303,7 @@
 <!------Photo Grid Tittle-->    
     <div class="w3-main" style="margin-left:250px;">
       <div class="nature w3-container">
-        <H1>Wellpapers</H1>
+        <H1>Trees</H1>
         <p>Let’s celebrate the magic of Mother Earth — with images of everything our planet has to offer, from stunning seascapes, starry skies, and everything in between.</p>
       </div>
     </div>
@@ -371,7 +371,7 @@
 <!------Photo Grid Tittle-->    
     <div class="w3-main" style="margin-left:250px;">
       <div class="nature w3-container">
-        <H1>Wellpapers</H1>
+        <H1>River</H1>
         <p>Let’s celebrate the magic of Mother Earth — with images of everything our planet has to offer, from stunning seascapes, starry skies, and everything in between.</p>
       </div>
     </div>
@@ -439,7 +439,7 @@
   <!-- Second Photo Grid-->
       <div class="w3-main" style="margin-left:250px;">
         <div class="nature w3-container">
-          <H1>Wellpapers</H1>
+          <H1>Birds</H1>
           <p>Let’s celebrate the magic of Mother Earth — with images of everything our planet has to offer, from stunning seascapes, starry skies, and everything in between.</p>
         </div>
       </div>
@@ -507,7 +507,7 @@
   <!------Photo Grid Tittle-->    
       <div class="w3-main" style="margin-left:250px;">
         <div class="nature w3-container">
-          <H1>Wellpapers</H1>
+          <H1>City</H1>
           <p>Let’s celebrate the magic of Mother Earth — with images of everything our planet has to offer, from stunning seascapes, starry skies, and everything in between.</p>
         </div>
       </div>
@@ -575,7 +575,7 @@
  <!------Photo Grid Tittle-->    
     <div class="w3-main" style="margin-left:250px;">
       <div class="nature w3-container">
-        <H1>Wellpapers</H1>
+        <H1>Animal</H1>
         <p>Let’s celebrate the magic of Mother Earth — with images of everything our planet has to offer, from stunning seascapes, starry skies, and everything in between.</p>
       </div>
     </div>
@@ -640,6 +640,213 @@
          </div>
       </div>
    </div>
+   <!-- people -->
+    <!------Photo Grid Tittle-->    
+    <div class="w3-main" style="margin-left:250px;">
+      <div class="nature w3-container">
+        <H1>Pepoles</H1>
+        <p>Let’s celebrate the magic of Mother Earth — with images of everything our planet has to offer, from stunning seascapes, starry skies, and everything in between.</p>
+      </div>
+    </div>
+<!-- First Photo Grid-->
+ <div class="w3-main" style="margin-left:250px;">
+        <div class="w3-row-padding content">
+            <div class="baguetteBoxOne gallery">
+                <div class="w3-third w3-margin-bottom w3-animate-zoom">
+                   <div class="image-top">
+                     <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                      <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                        <div class="like-view">
+                             <button type="button" class="btn btn-secondary" title="view">
+                                 <i class="fa fa-eye"></i>
+                             </button>
+                             <button type="button" class="btn btn-secondary" title="Like">
+                                 <i class="fa fa-heart-o"></i>
+                              </button>
+                              <button type="button" class="btn btn-secondary" title="Download">
+                                <i class="fa fa-arrow-down"></i>
+                             </button>
+                        </div>
+                      </a>
+                 </div>
+            </div>
+             <div class="w3-third w3-margin-bottom w3-animate-zoom">
+                <div class="image-top">
+                  <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                    <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                      <div class="like-view">
+                         <button type="button" class="btn btn-secondary" title="view">
+                           <i class="fa fa-eye"></i>
+                         </button>
+                         <button type="button" class="btn btn-secondary" title="Like">
+                           <i class="fa fa-heart-o"></i>
+                         </button>
+                         <button type="button" class="btn btn-secondary" title="Download">
+                           <i class="fa fa-arrow-down"></i>
+                         </button>
+                       </div>
+                    </a>
+                 </div>
+             </div>
+              <div class="w3-third w3-margin-bottom w3-animate-zoom">
+                <div class="image-top">
+                 <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                   <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                   <div class="like-view">
+                    <button type="button" class="btn btn-secondary" title="view">
+                       <i class="fa fa-eye"></i>
+                     </button>
+                     <button type="button" class="btn btn-secondary" title="Like">
+                       <i class="fa fa-heart-o"></i>
+                      </button>
+                      <button type="button" class="btn btn-secondary" title="Download">
+                        <i class="fa fa-arrow-down"></i>
+                       </button>
+                  </div>
+               </a>
+             </div>
+           </div>
+         </div>
+      </div>
+   </div>
+   <!-- technoligy -->
+ <!------Photo Grid Tittle-->    
+ <div class="w3-main" style="margin-left:250px;">
+  <div class="nature w3-container">
+    <H1>Technology</H1>
+    <p>Let’s celebrate the magic of Mother Earth — with images of everything our planet has to offer, from stunning seascapes, starry skies, and everything in between.</p>
+  </div>
+</div>
+<!-- First Photo Grid-->
+<div class="w3-main" style="margin-left:250px;">
+    <div class="w3-row-padding content">
+        <div class="baguetteBoxOne gallery">
+            <div class="w3-third w3-margin-bottom w3-animate-zoom">
+               <div class="image-top">
+                 <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                  <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                    <div class="like-view">
+                         <button type="button" class="btn btn-secondary" title="view">
+                             <i class="fa fa-eye"></i>
+                         </button>
+                         <button type="button" class="btn btn-secondary" title="Like">
+                             <i class="fa fa-heart-o"></i>
+                          </button>
+                          <button type="button" class="btn btn-secondary" title="Download">
+                            <i class="fa fa-arrow-down"></i>
+                         </button>
+                    </div>
+                  </a>
+             </div>
+        </div>
+         <div class="w3-third w3-margin-bottom w3-animate-zoom">
+            <div class="image-top">
+              <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                  <div class="like-view">
+                     <button type="button" class="btn btn-secondary" title="view">
+                       <i class="fa fa-eye"></i>
+                     </button>
+                     <button type="button" class="btn btn-secondary" title="Like">
+                       <i class="fa fa-heart-o"></i>
+                     </button>
+                     <button type="button" class="btn btn-secondary" title="Download">
+                       <i class="fa fa-arrow-down"></i>
+                     </button>
+                   </div>
+                </a>
+             </div>
+         </div>
+          <div class="w3-third w3-margin-bottom w3-animate-zoom">
+            <div class="image-top">
+             <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
+               <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+               <div class="like-view">
+                <button type="button" class="btn btn-secondary" title="view">
+                   <i class="fa fa-eye"></i>
+                 </button>
+                 <button type="button" class="btn btn-secondary" title="Like">
+                   <i class="fa fa-heart-o"></i>
+                  </button>
+                  <button type="button" class="btn btn-secondary" title="Download">
+                    <i class="fa fa-arrow-down"></i>
+                   </button>
+              </div>
+           </a>
+         </div>
+       </div>
+     </div>
+  </div>
+</div>
+<!-- Business -->
+ <!------Photo Grid Tittle-->    
+ <div class="w3-main" style="margin-left:250px;">
+  <div class="nature w3-container">
+    <H1>Business & Works</H1>
+    <p>Let’s celebrate the magic of Mother Earth — with images of everything our planet has to offer, from stunning seascapes, starry skies, and everything in between.</p>
+  </div>
+</div>
+<!-- First Photo Grid-->
+<div class="w3-main" style="margin-left:250px;">
+    <div class="w3-row-padding content">
+        <div class="baguetteBoxOne gallery">
+            <div class="w3-third w3-margin-bottom w3-animate-zoom">
+               <div class="image-top">
+                 <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                  <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                    <div class="like-view">
+                         <button type="button" class="btn btn-secondary" title="view">
+                             <i class="fa fa-eye"></i>
+                         </button>
+                         <button type="button" class="btn btn-secondary" title="Like">
+                             <i class="fa fa-heart-o"></i>
+                          </button>
+                          <button type="button" class="btn btn-secondary" title="Download">
+                            <i class="fa fa-arrow-down"></i>
+                         </button>
+                    </div>
+                  </a>
+             </div>
+        </div>
+         <div class="w3-third w3-margin-bottom w3-animate-zoom">
+            <div class="image-top">
+              <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                  <div class="like-view">
+                     <button type="button" class="btn btn-secondary" title="view">
+                       <i class="fa fa-eye"></i>
+                     </button>
+                     <button type="button" class="btn btn-secondary" title="Like">
+                       <i class="fa fa-heart-o"></i>
+                     </button>
+                     <button type="button" class="btn btn-secondary" title="Download">
+                       <i class="fa fa-arrow-down"></i>
+                     </button>
+                   </div>
+                </a>
+             </div>
+         </div>
+          <div class="w3-third w3-margin-bottom w3-animate-zoom">
+            <div class="image-top">
+             <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
+               <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+               <div class="like-view">
+                <button type="button" class="btn btn-secondary" title="view">
+                   <i class="fa fa-eye"></i>
+                 </button>
+                 <button type="button" class="btn btn-secondary" title="Like">
+                   <i class="fa fa-heart-o"></i>
+                  </button>
+                  <button type="button" class="btn btn-secondary" title="Download">
+                    <i class="fa fa-arrow-down"></i>
+                   </button>
+              </div>
+           </a>
+         </div>
+       </div>
+     </div>
+  </div>
+</div>
   <!-- Pagination -->
   <div class="w3-main" style="margin-left:250px;">
   <div class="w3-center w3-padding-32">
