--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             <div class="baguetteBoxOne gallery">
                 <div class="w3-third w3-margin-bottom w3-animate-zoom">
                    <div class="image-top">
-                     <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                      <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                     <a class="image-top" href="image/natural/4.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                      <img class="img img-fluid" src="image/natural/4.jpg" alt="" style="width:100%;">
                         <div class="like-view">
                              <button type="button" class="btn btn-secondary" title="view">
                                  <i class="fa fa-eye"></i>
@@ -127,8 +127,8 @@
             </div>
              <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
-                  <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                    <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                  <a class="image-top" href="image/natural/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                    <img class="img img-fluid" src="image/natural/2.jpg" alt="" style="width:100%;">
                       <div class="like-view">
                          <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -145,8 +145,8 @@
              </div>
               <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
-                 <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                   <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                 <a class="image-top" href="image/natural/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                   <img class="img img-fluid" src="image/natural/3.jpg" alt="" style="width:100%;">
                    <div class="like-view">
                     <button type="button" class="btn btn-secondary" title="view">
                        <i class="fa fa-eye"></i>
@@ -177,8 +177,8 @@
             <div class="baguetteBoxTwo gallery">
                 <div class="w3-third w3-margin-bottom w3-animate-zoom">
                    <div class="image-top">
-                     <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                      <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                     <a class="image-top" href="image/wellpaper/1.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                      <img class="img img-fluid" src="image/wellpaper/1.jpg" alt="" style="width:100%;">
                         <div class="like-view">
                              <button type="button" class="btn btn-secondary" title="view">
                                  <i class="fa fa-eye"></i>
@@ -195,8 +195,8 @@
             </div>
              <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
-                  <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                    <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                  <a class="image-top" href="image/wellpaper/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                    <img class="img img-fluid" src="image/wellpaper/2.jpg" alt="" style="width:100%;">
                       <div class="like-view">
                          <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -213,8 +213,8 @@
              </div>
               <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
-                 <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                   <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                 <a class="image-top" href="image/wellpaper/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                   <img class="img img-fluid" src="image/wellpaper/3.jpg" alt="" style="width:100%;">
                    <div class="like-view">
                     <button type="button" class="btn btn-secondary" title="view">
                        <i class="fa fa-eye"></i>
