--- a/Animal.html
+++ b/Animal.html
@@ -68,22 +68,22 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner img-st">
                <div class="carousel-item active">
-                 <img class="d-block w-100" src="image/w4.jpg" alt="First slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/animal/1.jpg" alt="First slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w1.jpg" alt="Second slide"style="width: 100%;" >
+                 <img class="d-block w-100" src="image/animal/2.jpg" alt="Second slide"style="width: 100%;" >
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w2.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/animal/3.jpg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w5.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/animal/4.jpg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w6.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/animal/5.jpg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w3.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/animal/6.jpg" alt="Third slide" style="width: 100%;">
                </div>
              </div>
           </div>
@@ -106,8 +106,8 @@
        <div class="baguetteBoxOne gallery">
           <div class="w3-third w3-animate-zoom">
              <div class="image-top">
-               <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+               <a class="image-top" href="image/animal/1.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                <img class="img img-fluid" src="image/animal/1.jpg" alt="" style="width:100%;">
                   <div class="like-view">
                        <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -124,8 +124,8 @@
         </div>
         <div class="w3-third w3-animate-zoom">
           <div class="image-top">
-            <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-              <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+            <a class="image-top" href="image/animal/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+              <img class="img img-fluid" src="image/animal/2.jpg" alt="" style="width:100%;">
                 <div class="like-view">
                    <button type="button" class="btn btn-secondary" title="view">
                      <i class="fa fa-eye"></i>
@@ -142,8 +142,8 @@
        </div>
         <div class="w3-third w3-animate-zoom">
            <div class="image-top">
-               <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                 <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+               <a class="image-top" href="image/animal/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                 <img class="img img-fluid" src="image/animal/3.jpg" alt="" style="width:100%;">
                     <div class="like-view">
                         <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -160,8 +160,8 @@
          </div>
          <div class="w3-third w3-animate-zoom">
              <div class="image-top">
-                <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                   <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                <a class="image-top" href="image/animal/5.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                   <img class="img img-fluid" src="image/animal/5.jpg" alt="" style="width:100%;">
                      <div class="like-view">
                         <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -178,8 +178,8 @@
            </div>
            <div class="w3-third w3-animate-zoom">
             <div class="image-top">
-              <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+              <a class="image-top" href="image/animal/6.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                <img class="img img-fluid" src="image/animal/6.jpg" alt="" style="width:100%;">
                   <div class="like-view">
                      <button type="button" class="btn btn-secondary" title="view">
                        <i class="fa fa-eye"></i>
