--- a/River.html
+++ b/River.html
@@ -70,22 +70,22 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner img-st">
                <div class="carousel-item active">
-                 <img class="d-block w-100" src="image/w4.jpg" alt="First slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/river/12.jpg" alt="First slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w1.jpg" alt="Second slide"style="width: 100%;" >
+                 <img class="d-block w-100" src="image/river/10.jpg" alt="Second slide"style="width: 100%;" >
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w2.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/river/4.jpg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w5.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/river/7.jpg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w6.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/river/8.jpg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w3.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/river/11.jpg" alt="Third slide" style="width: 100%;">
                </div>
              </div>
           </div>
@@ -108,8 +108,8 @@
        <div class="baguetteBoxOne gallery">
           <div class="w3-third w3-animate-zoom">
              <div class="image-top">
-               <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+               <a class="image-top" href="image/river/1.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                <img class="img img-fluid" src="image/river/1.jpg" alt="" style="width:100%;">
                   <div class="like-view">
                        <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -126,8 +126,8 @@
         </div>
         <div class="w3-third w3-animate-zoom">
           <div class="image-top">
-            <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-              <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+            <a class="image-top" href="image/river/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+              <img class="img img-fluid" src="image/river/2.jpg" alt="" style="width:100%;">
                 <div class="like-view">
                    <button type="button" class="btn btn-secondary" title="view">
                      <i class="fa fa-eye"></i>
@@ -144,8 +144,8 @@
        </div>
         <div class="w3-third w3-animate-zoom">
            <div class="image-top">
-               <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                 <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+               <a class="image-top" href="image/river/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                 <img class="img img-fluid" src="image/river/3.jpg" alt="" style="width:100%;">
                     <div class="like-view">
                         <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -162,8 +162,8 @@
          </div>
          <div class="w3-third w3-animate-zoom">
              <div class="image-top">
-                <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                   <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                <a class="image-top" href="image/river/4.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                   <img class="img img-fluid" src="image/river/4.jpg" alt="" style="width:100%;">
                      <div class="like-view">
                         <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -180,8 +180,8 @@
            </div>
            <div class="w3-third w3-animate-zoom">
             <div class="image-top">
-              <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+              <a class="image-top" href="image/river/5.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                <img class="img img-fluid" src="image/river/5.jpg" alt="" style="width:100%;">
                   <div class="like-view">
                      <button type="button" class="btn btn-secondary" title="view">
                        <i class="fa fa-eye"></i>
@@ -198,8 +198,8 @@
            </div>
            <div class="w3-third w3-animate-zoom">
              <div class="image-top">
-                 <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                   <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                 <a class="image-top" href="image/river/6.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                   <img class="img img-fluid" src="image/river/6.jpg" alt="" style="width:100%;">
                       <div class="like-view">
                           <button type="button" class="btn btn-secondary" title="view">
                              <i class="fa fa-eye"></i>
@@ -216,8 +216,8 @@
            </div>
            <div class="w3-third w3-animate-zoom">
                <div class="image-top">
-                  <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                     <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                  <a class="image-top" href="image/river/7.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                     <img class="img img-fluid" src="image/river/7.jpg" alt="" style="width:100%;">
                        <div class="like-view">
                           <button type="button" class="btn btn-secondary" title="view">
                              <i class="fa fa-eye"></i>
@@ -234,8 +234,8 @@
              </div>
              <div class="w3-third w3-animate-zoom">
               <div class="image-top">
-                <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                  <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                <a class="image-top" href="image/river/8.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                  <img class="img img-fluid" src="image/river/8.jpg" alt="" style="width:100%;">
                     <div class="like-view">
                        <button type="button" class="btn btn-secondary" title="view">
                          <i class="fa fa-eye"></i>
@@ -252,8 +252,8 @@
            </div>
             <div class="w3-third w3-animate-zoom">
                <div class="image-top">
-                   <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                     <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                   <a class="image-top" href="image/river/9.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                     <img class="img img-fluid" src="image/river/9.jpg" alt="" style="width:100%;">
                         <div class="like-view">
                             <button type="button" class="btn btn-secondary" title="view">
                                <i class="fa fa-eye"></i>
@@ -270,8 +270,8 @@
              </div>
              <div class="w3-third w3-animate-zoom">
                  <div class="image-top">
-                    <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                       <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                    <a class="image-top" href="image/river/10.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                       <img class="img img-fluid" src="image/river/10.jpg" alt="" style="width:100%;">
                          <div class="like-view">
                             <button type="button" class="btn btn-secondary" title="view">
                                <i class="fa fa-eye"></i>
@@ -288,8 +288,8 @@
                </div>
                <div class="w3-third w3-animate-zoom">
                 <div class="image-top">
-                  <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                    <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                  <a class="image-top" href="image/river/11.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                    <img class="img img-fluid" src="image/river/11.jpg" alt="" style="width:100%;">
                       <div class="like-view">
                          <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -306,8 +306,8 @@
              </div>
               <div class="w3-third w3-animate-zoom">
                  <div class="image-top">
-                     <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                       <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                     <a class="image-top" href="image/river/12.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                       <img class="img img-fluid" src="image/river/12.jpg" alt="" style="width:100%;">
                           <div class="like-view">
                               <button type="button" class="btn btn-secondary" title="view">
                                  <i class="fa fa-eye"></i>
