--- a/natural.html
+++ b/natural.html
@@ -71,22 +71,22 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner img-st">
                <div class="carousel-item active">
-                 <img class="d-block w-100" src="image/w4.jpg" alt="First slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/natural/1.jpg" alt="First slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w1.jpg" alt="Second slide"style="width: 100%;" >
+                 <img class="d-block w-100" src="image/natural/2.jpg" alt="Second slide"style="width: 100%;" >
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w2.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/natural/3.jpg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w5.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/natural/4.jpg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w6.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/natural/5.jpeg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w3.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/natural/6.jpeg" alt="Third slide" style="width: 100%;">
                </div>
              </div>
           </div>
@@ -109,8 +109,8 @@
        <div class="baguetteBoxOne gallery">
           <div class="w3-third w3-animate-zoom">
              <div class="image-top">
-               <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+               <a class="image-top" href="image/natural/1.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                <img class="img img-fluid" src="image/natural/1.jpg" alt="" style="width:100%;">
                   <div class="like-view">
                        <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -127,8 +127,8 @@
         </div>
         <div class="w3-third w3-animate-zoom">
           <div class="image-top">
-            <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-              <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+            <a class="image-top" href="image/natural/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+              <img class="img img-fluid" src="image/natural/2.jpg" alt="" style="width:100%;">
                 <div class="like-view">
                    <button type="button" class="btn btn-secondary" title="view">
                      <i class="fa fa-eye"></i>
@@ -145,8 +145,8 @@
        </div>
         <div class="w3-third w3-animate-zoom">
            <div class="image-top">
-               <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                 <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+               <a class="image-top" href="image/natural/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                 <img class="img img-fluid" src="image/natural/3.jpg" alt="" style="width:100%;">
                     <div class="like-view">
                         <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -163,8 +163,8 @@
          </div>
          <div class="w3-third w3-animate-zoom">
              <div class="image-top">
-                <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                   <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                <a class="image-top" href="image/natural/4.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                   <img class="img img-fluid" src="image/natural/4.jpg" alt="" style="width:100%;">
                      <div class="like-view">
                         <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -181,8 +181,8 @@
            </div>
            <div class="w3-third w3-animate-zoom">
             <div class="image-top">
-              <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+              <a class="image-top" href="image/natural/5.jpeg" data-caption="Goldern Bangla" style="width:99%;">
+                <img class="img img-fluid" src="image/natural/6.jpeg" alt="" style="width:100%;">
                   <div class="like-view">
                      <button type="button" class="btn btn-secondary" title="view">
                        <i class="fa fa-eye"></i>
@@ -199,8 +199,8 @@
            </div>
            <div class="w3-third w3-animate-zoom">
              <div class="image-top">
-                 <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                   <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                 <a class="image-top" href="image/natural/7.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                   <img class="img img-fluid" src="image/natural/7.jpg" alt="" style="width:100%;">
                       <div class="like-view">
                           <button type="button" class="btn btn-secondary" title="view">
                              <i class="fa fa-eye"></i>
@@ -217,8 +217,8 @@
            </div>
            <div class="w3-third w3-animate-zoom">
                <div class="image-top">
-                  <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                     <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                  <a class="image-top" href="image/natural/8.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                     <img class="img img-fluid" src="image/natural/8.jpg" alt="" style="width:100%;">
                        <div class="like-view">
                           <button type="button" class="btn btn-secondary" title="view">
                              <i class="fa fa-eye"></i>
@@ -235,8 +235,8 @@
              </div>
              <div class="w3-third w3-animate-zoom">
               <div class="image-top">
-                <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                  <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                <a class="image-top" href="image/natural/9.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                  <img class="img img-fluid" src="image/natural/9.jpg" alt="" style="width:100%;">
                     <div class="like-view">
                        <button type="button" class="btn btn-secondary" title="view">
                          <i class="fa fa-eye"></i>
@@ -253,8 +253,8 @@
            </div>
             <div class="w3-third w3-animate-zoom">
                <div class="image-top">
-                   <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                     <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                   <a class="image-top" href="image/natural/10.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                     <img class="img img-fluid" src="image/natural/10.jpg" alt="" style="width:100%;">
                         <div class="like-view">
                             <button type="button" class="btn btn-secondary" title="view">
                                <i class="fa fa-eye"></i>
@@ -271,8 +271,8 @@
              </div>
              <div class="w3-third w3-animate-zoom">
                  <div class="image-top">
-                    <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                       <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                    <a class="image-top" href="image/natural/11.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                       <img class="img img-fluid" src="image/natural/11.jpg" alt="" style="width:100%;">
                          <div class="like-view">
                             <button type="button" class="btn btn-secondary" title="view">
                                <i class="fa fa-eye"></i>
@@ -289,8 +289,8 @@
                </div>
                <div class="w3-third w3-animate-zoom">
                 <div class="image-top">
-                  <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                    <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                  <a class="image-top" href="image/natural/12.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                    <img class="img img-fluid" src="image/natural/12.jpg" alt="" style="width:100%;">
                       <div class="like-view">
                          <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -307,8 +307,8 @@
              </div>
               <div class="w3-third w3-animate-zoom">
                  <div class="image-top">
-                     <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                       <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                     <a class="image-top" href="image/natural/13.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                       <img class="img img-fluid" src="image/natural/13.jpg" alt="" style="width:100%;">
                           <div class="like-view">
                               <button type="button" class="btn btn-secondary" title="view">
                                  <i class="fa fa-eye"></i>
@@ -325,8 +325,8 @@
                </div>
                <div class="w3-third w3-animate-zoom">
                    <div class="image-top">
-                      <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                         <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                      <a class="image-top" href="image/natural/14.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                         <img class="img img-fluid" src="image/natural/14.jpg" alt="" style="width:100%;">
                            <div class="like-view">
                               <button type="button" class="btn btn-secondary" title="view">
                                  <i class="fa fa-eye"></i>
@@ -343,8 +343,8 @@
                  </div>
                  <div class="w3-third w3-animate-zoom">
                   <div class="image-top">
-                    <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                      <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                    <a class="image-top" href="image/natural/16.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                      <img class="img img-fluid" src="image/natural/16.jpg" alt="" style="width:100%;">
                         <div class="like-view">
                            <button type="button" class="btn btn-secondary" title="view">
                              <i class="fa fa-eye"></i>
@@ -361,8 +361,8 @@
                </div>
                 <div class="w3-third w3-animate-zoom">
                    <div class="image-top">
-                       <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                         <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                       <a class="image-top" href="image/natural/17.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                         <img class="img img-fluid" src="image/natural/17.jpg" alt="" style="width:100%;">
                             <div class="like-view">
                                 <button type="button" class="btn btn-secondary" title="view">
                                    <i class="fa fa-eye"></i>
@@ -379,8 +379,8 @@
                  </div>
                  <div class="w3-third w3-animate-zoom">
                      <div class="image-top">
-                        <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                           <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                        <a class="image-top" href="image/natural/15.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                           <img class="img img-fluid" src="image/natural/15.jpg" alt="" style="width:100%;">
                              <div class="like-view">
                                 <button type="button" class="btn btn-secondary" title="view">
                                    <i class="fa fa-eye"></i>
