--- a/wellpaper.html
+++ b/wellpaper.html
@@ -69,19 +69,19 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner img-st">
                <div class="carousel-item active">
-                 <img class="d-block w-100" src="image/w4.jpg" alt="First slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/wellpaper/1.jpg" alt="First slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w1.jpg" alt="Second slide"style="width: 100%;" >
+                 <img class="d-block w-100" src="image/wellpaper/2.jpg" alt="Second slide"style="width: 100%;" >
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w2.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/wellpaper/3.jpg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w5.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/wellpaper/4.jpg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w6.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/wellpaper/5.jpg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
                  <img class="d-block w-100" src="image/w3.jpg" alt="Third slide" style="width: 100%;">
@@ -107,8 +107,8 @@
        <div class="baguetteBoxOne gallery">
           <div class="w3-third w3-animate-zoom">
              <div class="image-top">
-               <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+               <a class="image-top" href="image/wellpaper/1.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                <img class="img img-fluid" src="image/wellpaper/1.jpg" alt="" style="width:100%;">
                   <div class="like-view">
                        <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -125,8 +125,8 @@
         </div>
         <div class="w3-third w3-animate-zoom">
           <div class="image-top">
-            <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-              <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+            <a class="image-top" href="image/wellpaper/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+              <img class="img img-fluid" src="image/wellpaper/2.jpg" alt="" style="width:100%;">
                 <div class="like-view">
                    <button type="button" class="btn btn-secondary" title="view">
                      <i class="fa fa-eye"></i>
@@ -143,8 +143,8 @@
        </div>
         <div class="w3-third w3-animate-zoom">
            <div class="image-top">
-               <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                 <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+               <a class="image-top" href="image/wellpaper/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                 <img class="img img-fluid" src="image/wellpaper/3.jpg" alt="" style="width:100%;">
                     <div class="like-view">
                         <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -161,8 +161,8 @@
          </div>
          <div class="w3-third w3-animate-zoom">
              <div class="image-top">
-                <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                   <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                <a class="image-top" href="image/wellpaper/4.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                   <img class="img img-fluid" src="image/wellpaper/4.jpg" alt="" style="width:100%;">
                      <div class="like-view">
                         <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -179,8 +179,8 @@
            </div>
            <div class="w3-third w3-animate-zoom">
             <div class="image-top">
-              <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+              <a class="image-top" href="image/wellpaper/5.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                <img class="img img-fluid" src="image/wellpaper/5.jpg" alt="" style="width:100%;">
                   <div class="like-view">
                      <button type="button" class="btn btn-secondary" title="view">
                        <i class="fa fa-eye"></i>
