--- a/Amazing.html
+++ b/Amazing.html
@@ -103,7 +103,7 @@
 
   <div class="w3-main" style="margin-left:250px;">
       <div class="w3-row-padding content">
-         <div class="baguetteBoxOne gallery">
+         <div class="baguetteBoxThree gallery">
             <div class="w3-third w3-animate-zoom">
                <div class="image-top">
                  <a class="image-top" href="image/amazing/1.jpg" data-caption="Goldern Bangla" style="width:99%;">
