--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!--------------------start nav section----------- -->
 <!-------------------- End carousel slider section----------- -->
 <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:250px;" id="mySidebar">
-  <a class="w3-bar-item w3-button w3-border-bottom w3-large" href="index.html"><img src="">Natural Photography</a>
+  <a class="w3-bar-item w3-button w3-border-bottom w3-large" href="index.html"><img class="logo" src="image/Natural logo.png"></a>
      <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
        <a class="w3-bar w3-bar-item w3-button w3-teal" href="#">Plants Name</a>
          <input type="text" id="mySearch" onkeyup="myStyle()" placeholder="Search.." title="Type in a category">
@@ -723,8 +723,8 @@
         <div class="baguetteBoxOne gallery">
             <div class="w3-third w3-margin-bottom w3-animate-zoom">
                <div class="image-top">
-                 <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                  <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                 <a class="image-top" href="image/technology/connected-technology.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                  <img class="img img-fluid" src="image/technology/connected-technology.jpg" alt="connected-technology" style="width:100%;">
                     <div class="like-view">
                          <button type="button" class="btn btn-secondary" title="view">
                              <i class="fa fa-eye"></i>
@@ -741,8 +741,8 @@
         </div>
          <div class="w3-third w3-margin-bottom w3-animate-zoom">
             <div class="image-top">
-              <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+              <a class="image-top" href="image/technology/event_technology.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                <img class="img img-fluid" src="image/technology/event_technology.jpg" alt="event_technology" style="width:100%;">
                   <div class="like-view">
                      <button type="button" class="btn btn-secondary" title="view">
                        <i class="fa fa-eye"></i>
@@ -759,8 +759,8 @@
          </div>
           <div class="w3-third w3-margin-bottom w3-animate-zoom">
             <div class="image-top">
-             <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-               <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+             <a class="image-top" href="image/technology/hand laptop.jpg" data-caption="Goldern Bangla" style="width:99%;">
+               <img class="img img-fluid" src="image/technology/hand laptop.jpg" alt="hand laptop" style="width:100%;">
                <div class="like-view">
                 <button type="button" class="btn btn-secondary" title="view">
                    <i class="fa fa-eye"></i>
@@ -792,8 +792,8 @@
         <div class="baguetteBoxOne gallery">
             <div class="w3-third w3-margin-bottom w3-animate-zoom">
                <div class="image-top">
-                 <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                  <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                 <a class="image-top" href="image/business/1.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                  <img class="img img-fluid" src="image/business/1.jpg" alt="" style="width:100%;">
                     <div class="like-view">
                          <button type="button" class="btn btn-secondary" title="view">
                              <i class="fa fa-eye"></i>
@@ -810,8 +810,8 @@
         </div>
          <div class="w3-third w3-margin-bottom w3-animate-zoom">
             <div class="image-top">
-              <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+              <a class="image-top" href="image/business/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                <img class="img img-fluid" src="image/business/2.jpg" alt="" style="width:100%;">
                   <div class="like-view">
                      <button type="button" class="btn btn-secondary" title="view">
                        <i class="fa fa-eye"></i>
@@ -828,8 +828,8 @@
          </div>
           <div class="w3-third w3-margin-bottom w3-animate-zoom">
             <div class="image-top">
-             <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-               <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+             <a class="image-top" href="image/business/3.jpg" data-caption="Goldern Bangla" style="width:99%;">
+               <img class="img img-fluid" src="image/business/3.jpg" alt="" style="width:100%;">
                <div class="like-view">
                 <button type="button" class="btn btn-secondary" title="view">
                    <i class="fa fa-eye"></i>
