--- a/people.html
+++ b/people.html
@@ -19,7 +19,7 @@
 <!--------------------start nav section----------- -->
 <!-------------------- End carousel slider section----------- -->
 <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:250px;" id="mySidebar">
-  <a class="w3-bar-item w3-button w3-border-bottom w3-large" href="index.html"><img src="">Natural Photography</a>
+  <a class="w3-bar-item w3-button w3-border-bottom w3-large" href="index.html"><img class="logo" src="image/Natural logo.png"></a>
      <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
        <a class="w3-bar w3-bar-item w3-button w3-teal" href="#">Plants Name</a>
          <input type="text" id="mySearch" onkeyup="myStyle()" placeholder="Search.." title="Type in a category">
@@ -69,13 +69,13 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner img-st">
                <div class="carousel-item active">
-                 <img class="d-block w-100" src="image/w4.jpg" alt="First slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/peoples/people1.png" alt="First slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w1.jpg" alt="Second slide"style="width: 100%;" >
+                 <img class="d-block w-100" src="image/peoples/1.jpg" alt="Second slide"style="width: 100%;" >
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="image/w2.jpg" alt="Third slide" style="width: 100%;">
+                 <img class="d-block w-100" src="image/peoples/2.jpg" alt="Third slide" style="width: 100%;">
                </div>
                <div class="carousel-item">
                  <img class="d-block w-100" src="image/w5.jpg" alt="Third slide" style="width: 100%;">
@@ -107,8 +107,8 @@
        <div class="baguetteBoxOne gallery">
           <div class="w3-third w3-animate-zoom">
              <div class="image-top">
-               <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+               <a class="image-top" href="image/peoples/1.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                <img class="img img-fluid" src="image/peoples/1.jpg" alt="" style="width:100%;">
                   <div class="like-view">
                        <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -125,8 +125,8 @@
         </div>
         <div class="w3-third w3-animate-zoom">
           <div class="image-top">
-            <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-              <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+            <a class="image-top" href="image/peoples/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+              <img class="img img-fluid" src="image/peoples/2.jpg" alt="" style="width:100%;">
                 <div class="like-view">
                    <button type="button" class="btn btn-secondary" title="view">
                      <i class="fa fa-eye"></i>
@@ -143,8 +143,8 @@
        </div>
         <div class="w3-third w3-animate-zoom">
            <div class="image-top">
-               <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                 <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+               <a class="image-top" href="image/peoples/people1.png" data-caption="Goldern Bangla" style="width:99%;">
+                 <img class="img img-fluid" src="image/peoples/people1.png" alt="" style="width:100%;">
                     <div class="like-view">
                         <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
