--- a/wellpaper.html
+++ b/wellpaper.html
@@ -19,7 +19,7 @@
 <!--------------------start nav section----------- -->
 <!-------------------- End carousel slider section----------- -->
 <nav class="w3-sidebar w3-bar-block w3-collapse w3-animate-left w3-card" style="z-index:3;width:250px;" id="mySidebar">
-  <a class="w3-bar-item w3-button w3-border-bottom w3-large" href="index.html"><img src="">Natural Photography</a>
+  <a class="w3-bar-item w3-button w3-border-bottom w3-large" href="index.html"><img class="logo" src="image/Natural logo.png"></a>
      <a class="w3-bar-item w3-button w3-hide-large w3-large" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa fa-remove"></i></a>
        <a class="w3-bar w3-bar-item w3-button w3-teal" href="#">Plants Name</a>
          <input type="text" id="mySearch" onkeyup="myStyle()" placeholder="Search.." title="Type in a category">
