--- a/index.html
+++ b/index.html
@@ -654,8 +654,8 @@
             <div class="baguetteBoxOne gallery">
                 <div class="w3-third w3-margin-bottom w3-animate-zoom">
                    <div class="image-top">
-                     <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                      <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                     <a class="image-top" href="image/peoples/1.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                      <img class="img img-fluid" src="image/peoples/1.jpg" alt="" style="width:100%;">
                         <div class="like-view">
                              <button type="button" class="btn btn-secondary" title="view">
                                  <i class="fa fa-eye"></i>
@@ -672,8 +672,8 @@
             </div>
              <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
-                  <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                    <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                  <a class="image-top" href="image/peoples/2.jpg" data-caption="Goldern Bangla" style="width:99%;">
+                    <img class="img img-fluid" src="image/peoples/2.jpg" alt="" style="width:100%;">
                       <div class="like-view">
                          <button type="button" class="btn btn-secondary" title="view">
                            <i class="fa fa-eye"></i>
@@ -690,8 +690,8 @@
              </div>
               <div class="w3-third w3-margin-bottom w3-animate-zoom">
                 <div class="image-top">
-                 <a class="image-top" href="image/image7.jpg" data-caption="Goldern Bangla" style="width:99%;">
-                   <img class="img img-fluid" src="image/image7.jpg" alt="" style="width:100%;">
+                 <a class="image-top" href="image/peoples/people1.png" data-caption="Goldern Bangla" style="width:99%;">
+                   <img class="img img-fluid" src="image/peoples/people1.png" alt="" style="width:100%;">
                    <div class="like-view">
                     <button type="button" class="btn btn-secondary" title="view">
                        <i class="fa fa-eye"></i>
